Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-1324

Query cancel cause segment to go into Crash recovery

VotersWatch issueWatchersLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 2.0.0.0-incubating
    • 2.1.0.0-incubating
    • Query Execution
    • None

    Description

      A query was cancelled due to this connection issue to HDFS on Isilon. Seg26 then went into crash recovery due to a INSERT query being cancelled. What should be the expected behaviour when HDFS becomes unavailable and a Query fails due to HDFS unavailability.

      There was a core file generated at the time of the Crash recovery.

      Attachments

        Issue Links

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            mli Ming Li
            mli Ming Li
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment