HAWQ-1324. Fixed crash at query cancel, signal hanler cannot call unsafe elog()